--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,61 +17,72 @@
     "export": "next export"
   },
   "dependencies": {
+    "@next/font": "^14.0.0",
+    "@radix-ui/react-avatar": "^1.1.10",
+    "@radix-ui/react-dialog": "^1.1.14",
+    "@radix-ui/react-dropdown-menu": "^2.1.15",
+    "@radix-ui/react-label": "^2.1.7",
+    "@radix-ui/react-progress": "^1.1.7",
+    "@radix-ui/react-slot": "^1.2.3",
+    "@radix-ui/react-toast": "^1.2.14",
+    "@tanstack/react-query": "^5.79.0",
+    "@tanstack/react-query-devtools": "^5.79.0",
+    "autoprefixer": "^10.4.16",
+    "axios": "^1.5.0",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "copy-to-clipboard": "^3.3.3",
+    "date-fns": "^2.30.0",
+    "framer-motion": "^10.16.4",
+    "i18next": "^23.5.1",
+    "i18next-browser-languagedetector": "^7.1.0",
+    "js-cookie": "^3.0.5",
+    "lucide-react": "^0.284.0",
     "next": "^14.0.0",
+    "next-themes": "^0.4.6",
+    "photoswipe": "^5.4.2",
+    "postcss": "^8.4.31",
+    "qrcode": "^1.5.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "@next/font": "^14.0.0",
-    "tailwindcss": "^3.3.0",
-    "autoprefixer": "^10.4.16",
-    "postcss": "^8.4.31",
-    "axios": "^1.5.0",
-    "socket.io-client": "^4.7.2",
-    "zustand": "^4.4.1",
-    "react-hook-form": "^7.46.1",
-    "react-hot-toast": "^2.4.1",
-    "framer-motion": "^10.16.4",
-    "lucide-react": "^0.284.0",
-    "clsx": "^2.0.0",
-    "tailwind-merge": "^1.14.0",
     "react-dropzone": "^14.2.3",
+    "react-hook-form": "^7.46.1",
+    "react-hot-toast": "^2.5.2",
+    "react-i18next": "^13.2.2",
+    "react-image-gallery": "^1.3.0",
     "react-intersection-observer": "^9.5.2",
+    "react-qr-code": "^2.0.11",
     "react-virtualized-auto-sizer": "^1.0.20",
     "react-window": "^1.8.8",
-    "date-fns": "^2.30.0",
-    "js-cookie": "^3.0.5",
-    "qrcode": "^1.5.3",
-    "react-qr-code": "^2.0.11",
-    "copy-to-clipboard": "^3.3.3",
-    "react-image-gallery": "^1.3.0",
+    "socket.io-client": "^4.7.2",
     "swiper": "^10.3.1",
-    "photoswipe": "^5.4.2",
-    "i18next": "^23.5.1",
-    "react-i18next": "^13.2.2",
-    "i18next-browser-languagedetector": "^7.1.0"
+    "tailwind-merge": "^1.14.0",
+    "tailwindcss": "^3.3.0",
+    "zustand": "^4.4.1"
   },
   "devDependencies": {
+    "@next/bundle-analyzer": "^14.0.0",
+    "@testing-library/jest-dom": "^6.1.3",
+    "@testing-library/react": "^13.4.0",
+    "@testing-library/user-event": "^14.4.3",
+    "@types/js-cookie": "^3.0.4",
     "@types/node": "^20.6.3",
+    "@types/qrcode": "^1.5.2",
     "@types/react": "^18.2.22",
     "@types/react-dom": "^18.2.7",
-    "@types/js-cookie": "^3.0.4",
-    "@types/qrcode": "^1.5.2",
     "@types/react-window": "^1.8.6",
-    "typescript": "^5.2.2",
-    "eslint": "^8.49.0",
-    "eslint-config-next": "^14.0.0",
     "@typescript-eslint/eslint-plugin": "^6.7.2",
     "@typescript-eslint/parser": "^6.7.2",
+    "cross-env": "^7.0.3",
+    "eslint": "^8.49.0",
+    "eslint-config-next": "^14.0.0",
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
-    "prettier": "^3.0.3",
-    "prettier-plugin-tailwindcss": "^0.5.4",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/jest-dom": "^6.1.3",
-    "@testing-library/user-event": "^14.4.3",
-    "cross-env": "^7.0.3",
-    "@next/bundle-analyzer": "^14.0.0"
+    "prettier": "^3.0.3",
+    "prettier-plugin-tailwindcss": "^0.5.4",
+    "typescript": "^5.2.2"
   },
   "engines": {
     "node": ">=18.0.0",
