--- a/backend/package.json
+++ b/backend/package.json
@@ -1,20 +1,12 @@
 {
   "name": "picture-live-backend",
   "version": "1.0.0",
-  "description": "个人照片直播应用后端API服务",
-  "main": "src/app.js",
+  "description": "Picture Live Backend API",
+  "main": "src/app-simple.js",
   "scripts": {
-    "start": "node src/app.js",
-    "dev": "nodemon src/app.js",
-    "build": "echo 'No build step required for Node.js'",
-    "test": "jest",
-    "test:watch": "jest --watch",
-    "test:coverage": "jest --coverage",
-    "lint": "eslint src/ --ext .js",
-    "lint:fix": "eslint src/ --ext .js --fix",
-    "db:migrate": "node scripts/migrate.js",
-    "db:seed": "node scripts/seed.js",
-    "db:reset": "node scripts/reset.js"
+    "start": "node src/app-simple.js",
+    "dev": "nodemon src/app-simple.js",
+    "test": "jest"
   },
   "dependencies": {
     "express": "^4.18.2",
@@ -25,43 +17,25 @@
     "jsonwebtoken": "^9.0.2",
     "multer": "^1.4.5-lts.1",
     "sharp": "^0.32.5",
-    "cors": "^2.8.5",
-    "helmet": "^7.0.0",
-    "express-rate-limit": "^6.10.0",
-    "express-validator": "^7.0.1",
-    "winston": "^3.10.0",
-    "dotenv": "^16.3.1",
     "uuid": "^9.0.0",
-    "mime-types": "^2.1.35",
-    "bull": "^4.11.3",
-    "@tensorflow/tfjs-node": "^4.10.0",
-    "@tensorflow-models/mobilenet": "^2.1.0",
-    "i18next": "^23.5.1",
-    "i18next-fs-backend": "^2.1.5",
-    "i18next-http-middleware": "^3.3.2"
+    "express-validator": "^7.0.1",
+    "helmet": "^7.0.0",
+    "cors": "^2.8.5",
+    "express-rate-limit": "^6.10.0",
+    "winston": "^3.10.0",
+    "dotenv": "^16.3.1"
   },
   "devDependencies": {
     "nodemon": "^3.0.1",
-    "jest": "^29.6.4",
-    "supertest": "^6.3.3",
-    "eslint": "^8.48.0",
-    "eslint-config-standard": "^17.1.0",
-    "eslint-plugin-import": "^2.28.1",
-    "eslint-plugin-n": "^16.0.2",
-    "eslint-plugin-promise": "^6.1.1",
-    "@types/jest": "^29.5.5"
-  },
-  "engines": {
-    "node": ">=18.0.0",
-    "npm": ">=8.0.0"
+    "jest": "^29.6.2",
+    "eslint": "^8.46.0"
   },
   "keywords": [
-    "photography",
-    "api",
-    "real-time",
-    "express",
-    "socket.io"
+    "photo",
+    "live",
+    "sharing",
+    "real-time"
   ],
-  "author": "Your Name",
+  "author": "Picture Live Team",
   "license": "MIT"
 }
