--- a/backend/.env.example
+++ b/backend/.env.example
@@ -69,8 +69,16 @@ SMTP_USER=
 SMTP_PASSWORD=
 SMTP_FROM=noreply@yourdomain.com
 
-# 云存储配置（可选）
+# 云存储配置
 CLOUD_STORAGE_PROVIDER=local
+# MinIO配置
+MINIO_ENDPOINT=localhost
+MINIO_PORT=9000
+MINIO_USE_SSL=false
+MINIO_ACCESS_KEY=minioadmin
+MINIO_SECRET_KEY=minioadmin
+MINIO_BUCKET=picture-live
+MINIO_PUBLIC_URL=http://localhost:9000
 # 阿里云OSS
 ALIYUN_OSS_REGION=
 ALIYUN_OSS_BUCKET=
