--- a/backend/package.json
+++ b/backend/package.json
@@ -10,20 +10,26 @@
   },
   "dependencies": {
     "express": "^4.18.2",
-    "socket.io": "^4.7.2",
+    "express-validator": "^7.0.1",
+    "express-rate-limit": "^7.1.5",
+    "helmet": "^7.1.0",
+    "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
     "pg": "^8.11.3",
-    "redis": "^4.6.8",
+    "redis": "^4.6.10",
+    "socket.io": "^4.7.4",
+    "multer": "^1.4.5-lts.1",
+    "sharp": "^0.32.6",
+    "uuid": "^9.0.1",
     "bcryptjs": "^2.4.3",
     "jsonwebtoken": "^9.0.2",
-    "multer": "^1.4.5-lts.1",
-    "sharp": "^0.32.5",
-    "uuid": "^9.0.0",
-    "express-validator": "^7.0.1",
-    "helmet": "^7.0.0",
-    "cors": "^2.8.5",
-    "express-rate-limit": "^6.10.0",
-    "winston": "^3.10.0",
-    "dotenv": "^16.3.1"
+    "winston": "^3.11.0",
+    "winston-daily-rotate-file": "^4.7.1",
+    "compression": "^1.7.4",
+    "express-slow-down": "^2.0.1",
+    "minio": "^7.1.3",
+    "ali-oss": "^6.18.1",
+    "aws-sdk": "^2.1498.0"
   },
   "devDependencies": {
     "nodemon": "^3.0.1",
