--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,7 +17,7 @@
     "export": "next export"
   },
   "dependencies": {
-    "@next/font": "^14.0.0",
+    "@hookform/resolvers": "^5.0.1",
     "@radix-ui/react-avatar": "^1.1.10",
     "@radix-ui/react-dialog": "^1.1.14",
     "@radix-ui/react-dropdown-menu": "^2.1.15",
@@ -25,6 +25,7 @@
     "@radix-ui/react-progress": "^1.1.7",
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-toast": "^1.2.14",
+    "@tailwindcss/forms": "^0.5.10",
     "@tanstack/react-query": "^5.79.0",
     "@tanstack/react-query-devtools": "^5.79.0",
     "autoprefixer": "^10.4.16",
@@ -55,9 +56,11 @@
     "react-virtualized-auto-sizer": "^1.0.20",
     "react-window": "^1.8.8",
     "socket.io-client": "^4.7.2",
+    "sonner": "^2.0.5",
     "swiper": "^10.3.1",
     "tailwind-merge": "^1.14.0",
     "tailwindcss": "^3.3.0",
+    "zod": "^3.25.49",
     "zustand": "^4.4.1"
   },
   "devDependencies": {
