--- a/backend/package.json
+++ b/backend/package.json
@@ -2,39 +2,39 @@
   "name": "picture-live-backend",
   "version": "1.0.0",
   "description": "Picture Live Backend API",
-  "main": "src/app-simple.js",
+  "main": "src/app.js",
   "scripts": {
-    "start": "node src/app-simple.js",
-    "dev": "nodemon src/app-simple.js",
+    "start": "node src/app.js",
+    "dev": "nodemon src/app.js",
     "test": "jest"
   },
   "dependencies": {
-    "express": "^4.18.2",
-    "express-validator": "^7.0.1",
-    "express-rate-limit": "^7.1.5",
-    "helmet": "^7.1.0",
+    "ali-oss": "^6.18.1",
+    "aws-sdk": "^2.1498.0",
+    "bcryptjs": "^2.4.3",
+    "compression": "^1.7.4",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
+    "express": "^4.18.2",
+    "express-rate-limit": "^7.1.5",
+    "express-slow-down": "^2.0.1",
+    "express-validator": "^7.0.1",
+    "helmet": "^7.1.0",
+    "jsonwebtoken": "^9.0.2",
+    "minio": "^7.1.3",
+    "multer": "^1.4.5-lts.1",
     "pg": "^8.11.3",
     "redis": "^4.6.10",
-    "socket.io": "^4.7.4",
-    "multer": "^1.4.5-lts.1",
     "sharp": "^0.32.6",
+    "socket.io": "^4.7.4",
     "uuid": "^9.0.1",
-    "bcryptjs": "^2.4.3",
-    "jsonwebtoken": "^9.0.2",
     "winston": "^3.11.0",
-    "winston-daily-rotate-file": "^4.7.1",
-    "compression": "^1.7.4",
-    "express-slow-down": "^2.0.1",
-    "minio": "^7.1.3",
-    "ali-oss": "^6.18.1",
-    "aws-sdk": "^2.1498.0"
+    "winston-daily-rotate-file": "^4.7.1"
   },
   "devDependencies": {
-    "nodemon": "^3.0.1",
+    "eslint": "^8.46.0",
     "jest": "^29.6.2",
-    "eslint": "^8.46.0"
+    "nodemon": "^3.0.1"
   },
   "keywords": [
     "photo",
