--- a/backend/package.json
+++ b/backend/package.json
@@ -11,11 +11,12 @@
   "dependencies": {
     "ali-oss": "^6.18.1",
     "aws-sdk": "^2.1498.0",
+    "axios": "^1.9.0",
     "bcryptjs": "^2.4.3",
     "compression": "^1.7.4",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
-    "express": "^4.18.2",
+    "express": "^4.21.2",
     "express-rate-limit": "^7.1.5",
     "express-slow-down": "^2.0.1",
     "express-validator": "^7.0.1",
