--- a/mobile/ios/Runner/Info.plist
+++ b/mobile/ios/Runner/Info.plist
@@ -44,9 +44,9 @@
 	
 	<!-- 权限描述 -->
 	<key>NSCameraUsageDescription</key>
-	<string>此应用需要访问相机来拍摄和上传照片到直播会话中</string>
+	<string>此应用需要访问相机来拍摄和上传照片到直播相册中</string>
 	<key>NSPhotoLibraryUsageDescription</key>
-	<string>此应用需要访问相册来选择和上传照片到直播会话中</string>
+	<string>此应用需要访问相册来选择和上传照片到直播相册中</string>
 	<key>NSPhotoLibraryAddUsageDescription</key>
 	<string>此应用需要保存照片到相册</string>
 	<key>NSLocationWhenInUseUsageDescription</key>
